--- a/.github/workflows/recalibrate.yml
+++ b/.github/workflows/recalibrate.yml
@@ -1,31 +1,20 @@
-name: Recalibrate Bot
+import math
 
-on:
-  schedule:
-    - cron: "0 */6 * * *"   # cada 6 horas
-  workflow_dispatch:
+def recalibrate():
+    # ... tu código previo para calcular avg_win_prob ...
 
-jobs:
-  recalibrate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    if avg_win_prob is None or math.isnan(avg_win_prob):
+        print("⚠️ No hay datos válidos para recalibrar. Se omite esta ejecución.")
+        return
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+    new_threshold = max(70, min(90, int(avg_win_prob)))
+    print(f"✅ Nuevo umbral calculado: {new_threshold}")
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    # guardar o actualizar en Google Sheets aquí
+    # SHEET.update_cell(...)
 
-      - name: Run recalibration
-        env:
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
-        run: |
-          echo "🚀 Ejecutando recalibrate.py"
-          python recalibrate.py
+if __name__ == "__main__":
+    try:
+        recalibrate()
+    except Exception as e:
+        print(f"❌ Error en recalibrate: {e}")
