--- a/.github/workflows/recalibrate.yml
+++ b/.github/workflows/recalibrate.yml
@@ -1,32 +1,94 @@
 name: Recalibrate Bot
 
 on:
-schedule:
-- cron: "0 */6 * * *"   # cada 6 horas
-workflow_dispatch:
+  schedule:
+    - cron: "0 */6 * * *"   # cada 6 horas
+    - cron: "0 0 * * 0"     # limpieza semanal (domingo a medianoche)
+  workflow_dispatch:
 
 jobs:
-recalibrate:
-runs-on: ubuntu-latest
-steps:
-- name: Checkout repo
-uses: actions/checkout@v3
+  recalibrate:
+    runs-on: ubuntu-latest
 
-- name: Set up Python  
-    uses: actions/setup-python@v4  
-    with:  
-      python-version: "3.10"  
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-  - name: Install dependencies  
-    run: |  
-      python -m pip install --upgrade pip  
-      pip install -r requirements.txt  
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-  - name: Run recalibration  
-    env:  
-      SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}  
-      GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}  
-    run: |  
-      echo "🚀 Ejecutando recalibrate.py"  
-      python recalibrate.py
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
+      - name: Run recalibration
+        env:
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
+        run: |
+          echo "🚀 Ejecutando recalibrate.py"
+          python recalibrate.py
+
+      - name: Log to Google Sheets (debug)
+        env:
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
+        run: |
+          echo "📝 Registrando ejecución en debug..."
+          python - <<'EOF'
+import os, json, datetime as dt, gspread
+from google.oauth2.service_account import Credentials
+
+SPREADSHEET_ID = os.getenv("SPREADSHEET_ID")
+GS_JSON = json.loads(os.getenv("GOOGLE_SHEETS_JSON"))
+CREDS = Credentials.from_service_account_info(GS_JSON, scopes=["https://www.googleapis.com/auth/spreadsheets"])
+GC = gspread.authorize(CREDS)
+
+try:
+    # acceso hoja debug
+    try:
+        ws = GC.open_by_key(SPREADSHEET_ID).worksheet("debug")
+    except gspread.WorksheetNotFound:
+        ws = GC.open_by_key(SPREADSHEET_ID).add_worksheet("debug", rows=2000, cols=10)
+        ws.update("A1:D1", [["Fecha","Proceso","Status","Mensaje"]])
+
+    ws.append_row([dt.datetime.now().isoformat(), "Recalibrate", "OK", "Ejecución completada"])
+    print("✅ Debug log guardado")
+except Exception as e:
+    print("⚠️ Error guardando log en debug:", e)
+EOF
+
+  cleanup-debug:
+    if: github.event.schedule == '0 0 * * 0'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cleanup debug log
+        env:
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
+        run: |
+          echo "🧹 Limpiando registros antiguos de debug..."
+          python - <<'EOF'
+import os, json, gspread
+from google.oauth2.service_account import Credentials
+
+SPREADSHEET_ID = os.getenv("SPREADSHEET_ID")
+GS_JSON = json.loads(os.getenv("GOOGLE_SHEETS_JSON"))
+CREDS = Credentials.from_service_account_info(GS_JSON, scopes=["https://www.googleapis.com/auth/spreadsheets"])
+GC = gspread.authorize(CREDS)
+
+try:
+    ws = GC.open_by_key(SPREADSHEET_ID).worksheet("debug")
+    vals = ws.get_all_values()
+    header, rows = vals[0], vals[1:]
+    # Mantener solo los últimos 200 registros
+    keep = rows[-200:]
+    ws.clear()
+    ws.update("A1", [header] + keep)
+    print("✅ Debug log limpiado, manteniendo últimos 200 registros")
+except Exception as e:
+    print("⚠️ No se pudo limpiar debug:", e)
+EOF
